--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,49 @@ p {
 .navbar-item {
   color: white;
 }
+
+.meme-container {
+  padding: 20px;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 20px;
+  row-gap: 50px;
+}
+
+.form-button {
+  grid-column: 1 / -1;
+  border: 0px;
+  border-radius: 5px;
+  background: rgb(103, 34, 128);
+  background: linear-gradient(90deg, rgba(103, 34, 128, 1) 0%, rgba(166, 38, 211, 1) 100%);
+  color: white;
+}
+
+.first-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.second-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-1 {
+  padding: 10px;
+  border: 1px solid #d5d4d8;
+  border-radius: 5px;
+  text-indent: 5px;
+  margin-top: 5px;
+}
+
+.input-2 {
+  padding: 10px;
+  border: 1px solid #d5d4d8;
+  border-radius: 5px;
+  text-indent: 5px;
+  margin-top: 5px;
+}
